# escriba

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  streamlit_app.py
app/: __init__.py  main.py
app/api/: endpoints.py  models.py  routes.py
app/core/: config.py  logger.py
app/services/: __init__.py  gemini.py  groq.py  prompt_templates.py  transcription_service.py
prompts/: transcription.jinja2
